"Cambios en la programacion"

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/table_background"
     tools:context=".MainActivity">
 
     <TextView
@@ -11,6 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textColor="@color/light_white"
         android:text="MAQUINA: 0"
         android:textSize="26sp"
         android:textStyle="bold"
@@ -24,6 +26,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="JUGADOR: 0"
+        android:textColor="@color/light_white"
         android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
@@ -35,6 +38,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="PIEDRA"
+        android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline12"
         app:layout_constraintEnd_toStartOf="@+id/guideline9"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
@@ -45,6 +49,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="PAPEL"
+        android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline12"
         app:layout_constraintEnd_toStartOf="@+id/guideline10"
         app:layout_constraintStart_toStartOf="@+id/guideline9"
@@ -55,6 +60,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:text="TIJERAS"
+        android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline12"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
@@ -65,7 +71,7 @@
         android:id="@+id/imagenHumano"
         android:layout_width="140dp"
         android:layout_height="140dp"
-        android:src="@drawable/rock"
+        android:src="@drawable/scissors"
         android:layout_marginBottom="42dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline11"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
@@ -89,6 +95,7 @@
         android:layout_height="0dp"
         android:gravity="center"
         android:text="MAQUINA GANA"
+        android:textColor="@color/light_white"
         android:textSize="26dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline8"
