--- a/app/src/main/res/layout/information_dialog.xml
+++ b/app/src/main/res/layout/information_dialog.xml
@@ -39,6 +39,7 @@
         <LinearLayout
             android:orientation="vertical"
             android:gravity="center"
+            android:layout_marginTop="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
