--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="light_white">#FAFAFA</color>
+    <color name="transparent">#00000000</color>
 </resources>
