"Cambios en la programacion"

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:gravity="center"
         android:textColor="@color/light_white"
         android:text="MAQUINA: 0"
-        android:textSize="26sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
@@ -27,7 +27,7 @@
         android:gravity="center"
         android:text="JUGADOR: 0"
         android:textColor="@color/light_white"
-        android:textSize="26sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
@@ -35,10 +35,10 @@
 
     <Button
         android:id="@+id/botonPiedra"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="120dp"
+        android:layout_height="80dp"
         android:text="PIEDRA"
-        android:textSize="15sp"
+        android:textSize="19sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline12"
         app:layout_constraintEnd_toStartOf="@+id/guideline9"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
@@ -46,10 +46,10 @@
 
     <Button
         android:id="@+id/botonPapel"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="120dp"
+        android:layout_height="80dp"
         android:text="PAPEL"
-        android:textSize="15sp"
+        android:textSize="19sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline12"
         app:layout_constraintEnd_toStartOf="@+id/guideline10"
         app:layout_constraintStart_toStartOf="@+id/guideline9"
@@ -57,10 +57,12 @@
 
     <Button
         android:id="@+id/botonTijeras"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="120dp"
+        android:layout_height="80dp"
+        android:paddingLeft="0dp"
+        android:paddingRight="0dp"
         android:text="TIJERAS"
-        android:textSize="15sp"
+        android:textSize="19sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline12"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
@@ -96,7 +98,7 @@
         android:gravity="center"
         android:text="MAQUINA GANA"
         android:textColor="@color/light_white"
-        android:textSize="26dp"
+        android:textSize="30dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline8"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
